--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,8 @@
     "paths": {
       "@routes": ["src/main/routes/index"],
       "@screens": ["src/presentation/screens/index"],
+      "@icons": ["src/presentation/assets/icons/index"],
+      "@components": ["src/presentation/components/index"],
       "src/*": ["src/*"]
     }
   }
